libs/@local/hashql/ast/tests/ui/lowering/import-resolver/item-not-found.jsonc
//@ run: fail
//@ description: should error out if item does not exist
["use", "math", { "#tuple": ["llshift"] }, "_"]
//~^ ERROR 'llshift' not found in module 'math'
